@@ -1,20 +1,6 @@
 oracle 11g on fc9 doc
 
-sqlr-stop doesn't support -localstatedir
-
 config gui segfaults when creating a file
-
-integrate erlang api
-
-Non C/C++ api's need a method to close cursors.  Specifically, bind cursors
-cannot be closed manually and must be garbage collected.  It's not an issue for
-memory, but rather a server-side cursor will be occupied until it's garbage
-collected.  On C/C++ you can just delete it.
-   Still needs to be done for a couple of API's, verify that the refcount is
-	ok for ones that have been implemented, or that a double-delete is safe
-
-Perl DBI driver needs to convert bind vars from ?'s to db-appropriate format
-	like PHP Pear DB driver does
 
 PHP pear db only returns 100 rows with this code:
 $query = "SELECT id, name FROM ct_contest ORDER BY name ASC;";
@@ -28,9 +14,6 @@ $selected>$line[name]</option>\n");
         $result->free();
 
 connection daemons have some issue with detaching (I think)
-
-document using postgresql/mysql-drop-in with php
-
 
 mysql db reconnect doesn't appear to work correctly
 allowing query timeout appears to hang the sqlrelay server
@@ -201,6 +184,13 @@ Security:
 	* SSL encryption, key-based authentication
 
 Features:
+	* Perl DBI driver needs to convert bind vars from ?'s to
+		db-appropriate format like PHP Pear DB driver does
+	* Non C/C++ api's need a method to close cursors.  Specifically, bind
+		cursors cannot be closed manually and must be garbage collected.
+		It's not an issue for memory, but rather a server-side cursor
+		will be occupied until it's garbage collected.  On C/C++ you
+		can just delete it.
 	* daemontools compatibility
 	* figure out how to get the drop-in client compiled into the mysql PHP
 		module like the mysql native client is
