@@ -1,10 +1,34 @@
 #!/bin/sh
 
-ID=`echo $1 | sed -e "s| ||g" 2> /dev/null`
-KILLARGS=$2
-
 prefix=@prefix@
-PIDDIR=@localstatedir@/sqlrelay/tmp/pids
+
+# parse the args
+ID=""
+KILLARGS=""
+LOCALSTATEDIR=@localstatedir@
+FIRST=1
+NEXTISLOCALSTATEDIR=0
+for arg in $@
+do
+	if ( test "$arg" = "-localstatedir" )
+	then
+		NEXTISLOCALSTATEDIR=1
+	else
+		if ( test "$NEXTISLOCALSTATEDIR" = "1" )
+		then
+			LOCALSTATEDIR=$arg
+			NEXTISLOCALSTATEDIR=0
+		elif ( test "$FIRST" = "1" )
+		then
+			ID=`echo $arg | sed -e "s| ||g" 2> /dev/null`
+			FIRST=0
+		else
+			KILLARGS=$arg
+		fi
+	fi
+done
+
+PIDDIR=$LOCALSTATEDIR/sqlrelay/tmp/pids
 
 FILES=""
 if ( test -z "$ID" )
@@ -30,7 +54,7 @@ do
 			then
 				PID=`cat $file`
 				echo "killing process $PID..."
-				kill $KILLARGS $PID
+				echo kill $KILLARGS $PID
 				if ( test "$?" = "0" )
 				then
 					echo "   success"
