@@ -134,6 +134,9 @@ is simlar to using it on the command line.  You just need to add the LD_PRELOAD
 command to the startup script for the daemon before the command that starts the
 daemon itself.</p>
 
+<p>This goes for using the drop-in replacement library with PHP.  You just need
+to add the LD_PRELOAD command to the startup script for the http daemon.</p>
+
 <br>
 <a name="inetd"></a>
 <span class="heading2">Using the drop-in replacement library with inetd/xinetd helper programs</span><br>
