@@ -99,6 +99,8 @@ databases and throttling database access.</p>
 <img src="invisible.gif" height="1" width="20" alt="  ">
 <a href="programming/tcl.html">Programming with SQL Relay using the TCL API</a><br>
 <img src="invisible.gif" height="1" width="20" alt="  ">
+<a href="programming/erlang.html">Programming with SQL Relay using the Erlang API</a><br>
+<img src="invisible.gif" height="1" width="20" alt="  ">
 <a href="programming/zope.html">Programming with SQL Relay using Zope</a><br>
 <img src="invisible.gif" height="1" width="20" alt="  ">
 <a href="programming/odbc.html">Programming with SQL Relay using ODBC</a><br>
