@@ -1,0 +1,15 @@
+<html>
+<head>
+<title>firstworks   Programming with SQL Relay using the Erlang API</title>
+<link href="../css/styles.css" rel="stylesheet">
+</head>
+<body>
+
+<span class="heading1">Programming with SQL Relay using the Erlang API</span><br><br>
+
+<p>The Erlang API is really new and no documentation has been written yet.  The
+functions match the C API functions without the sqlrcon_ and sqlrcur_ 
+prefixes.</p>
+
+</body>
+</html>
